--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations: 
     github.com/project-slug: alokmaurya1/golang8
     backstage.io/source-ref: "https://github.com/alokmaurya1/golang8"
-    backstage.io/techdocs-ref: url:https://github.com/alokmaurya1/golang8
+    backstage.io/techdocs-ref: github:https://github.com/alokmaurya1/golang8
     backstage.io/github-actions-id: https://github.com/alokmaurya1/golang8
 spec:
   type: service
